--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+
     <header>
     <div id="navigationBar" class="container">
         <p>Programming Task 4</p>
@@ -20,6 +21,31 @@
         </nav>
       </div>
     </header> 
+
+    <section id="triangle">
+        <div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </section>
+
+    <footer>
+        <div id="copyright">
+          <div id="footPage" class="container">
+            <a href="#" target="_blank"
+              ><img src="media/facebookIcon.svg" alt=""
+            /></a>
+            <a href="#" target="_blank"
+              ><img src="media/twitterIcon.svg" alt=""
+            /></a>
+            <a href="#" target="_blank"
+              ><img src="media/instagramIcon.svg" alt=""
+            /></a>
+          </div>
+          <small>&copy All rights reserved</small>
+        </div>
+      </footer>
 
 </body>
 </html>
